--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.17.1",
     "express.js": "^1.0.0",
     "handlebars": "^4.7.3",
+    "hbs": "^4.1.0",
     "middleware": "^1.0.0"
   }
 }
